# RAPIDS

./: .gitignore  COMMIT_MESSAGE.md  README.md  cli.py  main.py  phase_checks.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
core/: logger.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  PROJECT_STRUCTURE.md
evaluation/: feature_analysis.py
src/rapids/: __init__.py  cli.py  main.py  rapids.py
src/rapids/core/: config_loader.py  logger.py  redis_utils.py
src/rapids/detection/: anomaly_model.py  data_loader.py
src/rapids/evaluation/: benchmarking.py  feature_analysis.py  model_evaluation.py  phase_checks.py
src/rapids/reasoning/: attack_graph.py  attack_paths.py  engine.py  host_identity.py  policy_engine.py  role_classifier.py
src/rapids/streaming/: consumer.py  producer.py  run_streaming_ids.py
streaming/: consumer.py  producer.py  run_streaming_ids.py
tests/: conftest.py  test_anomaly_model.py  test_attack_graph_enhanced.py  test_attack_paths.py  test_host_identity.py  test_phase4_phase5.py  test_reasoning_engine.py
