[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapids"
version = "0.1.0"
description = "Real-time, attack-path aware intrusion detection system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "RAPIDS Contributors"}]
dependencies = [
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "fonttools==4.61.1",
  "joblib==1.5.3",
  "kiwisolver==1.4.9",
  "matplotlib==3.10.8",
  "numpy==2.4.2",
  "packaging==26.0",
  "pandas==3.0.0",
  "pillow==12.1.1",
  "pyparsing==3.3.2",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.3",
  "pytest==8.3.4",
  "redis==7.1.1",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "tzdata==2025.3",
]

[project.scripts]
rapids = "rapids.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
